# bonner-datasets

./: .gitignore  README.md  catalog.csv  pyproject.toml  setup.py
.github/workflows/: pages.yml
bonner/datasets/: __init__.py  _brainio.py  _figshare.py  _package.py  _utils.py  package_dataset.py  utils.py
bonner/datasets/_utils/: brainio.py  file.py  nii.py  s3.py  xarray.py
bonner/datasets/allen2021_natural_scenes/: __init__.py  _data_assemblies.py  _data_assembly.py  _download.py  _package.py  _stimulus_set.py  _transform.py  _utils.py  data_assemblies.py  download.py  main.py  package.py  package_assemblies.py  package_stimulus_set.py  stimulus_set.py  utils.py
bonner/datasets/bonner2021_object2vec/: _data_assemblies.py  _stimulus_set.py  constants.py  download.py  main.py  package_assemblies.py  package_stimulus_set.py  utils.py
bonner/datasets/chang2019_bold5000/: _data_assemblies.py  _download.py  _stimulus_set.py  _utils.py  download.py  main.py  package.py  package_assemblies.py  package_stimulus_set.py
bonner/datasets/majaj2015_macaque/: package.py
bonner/datasets/majaj2015_monkey/: data_assembly.py
bonner/datasets/neural/: _brainio.py  _utils.py  package_dataset.py
bonner/datasets/neural/allen2021_natural_scenes/: BIBTEX  __init__.py  _data_assemblies.py  _download.py  _package.py  _stimulus_set.py  _utils.py  download.py  main.py  package_assemblies.py  package_stimulus_set.py  utils.py
bonner/datasets/neural/bonner2021_object2vec/: BIBTEX  __init__.py  _download.py  _package.py  _utils.py  download.py  main.py  package_assemblies.py  package_stimulus_set.py
bonner/datasets/neural/chang2019_bold5000/: BIBTEX  download.py  main.py  package_assemblies.py  package_stimulus_set.py  utils.py
bonner/datasets/neural/stringer2019_mouse/: _download.py  download.py  main.py  utils.py
bonner/datasets/stringer2019_mouse/: __init__.py  _data_assemblies.py  _download.py  _package.py  _stimulus_set.py  _utils.py
bonner/datasets/stringer2019_mouse_10k/: __init__.py  _download.py  _package.py  _stimulus_set.py  _utils.py
bonner/datasets/utils/: __init__.py  figshare.py
bonner/datasets/utils/brainio/: assembly.py  stimulus_set.py
docs/: conf.py
docs/_build/doctrees/: index.doctree
docs/_build/doctrees/pages/: api_reference.doctree  todo.doctree  user_guide.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/pages/: api_reference.rst.txt  todo.rst.txt
docs/_build/html/pages/: api_reference.html  todo.html  user_guide.html
docs/pages/: api_reference.rst  user_guide.rst
scripts/: package_neural_dataset.py
